--- a/uv-install-pytorch/pyproject.toml
+++ b/uv-install-pytorch/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "nvidia-cublas-cu12==12.4.5.8",
+    "nvidia-cudnn-cu12==9.7.0.66",
     "nvidia-cusolver-cu12==11.6.1.9",
 ]
